<resources>
    <string name="app_name">Patient</string>
    <string name="sign_out">Sign out</string>
    <string name="add_new_patient">Add new patient</string>
    <string name="patients">Patients</string>
    <string name="add">Add</string>
    <string name="patient_birth_year">Patient birth year</string>
    <string name="patient_name">Patient name</string>
    <string name="connecting">Connecting…</string>
    <string name="connection_lost">Connection lost</string>
    <string name="doctor">Doctor:</string>
    <string name="patient_with_colon">Patient:</string>
    <string name="illness">Illness:</string>
    <string name="medicines">Medicines:</string>
    <string name="tests">Tests:</string>
    <string name="advice">Advice:</string>
    <string name="connect_with_our_doctors_directly">Connect with our doctors directly in the \n<b>Virtual Chamber</b></string>
    <string name="go_to_chamber">Go to chamber</string>
    <string name="prescription">Prescription</string>
    <string name="without_payment">Without payment</string>
    <string name="with_payment">With payment (bKash)</string>
    <string name="amount">Amount</string>
    <string name="bkash_account_no">bKash account no</string>
    <string name="transaction_id">Transaction id (from sms)</string>
    <string name="leave_chamber">Leave chamber</string>
    <string name="txn">Txn: %1s</string>
    <string name="bkash_with_param">bKash: %1s</string>
    <string name="chamber">Chamber</string>
    <string name="no_patients">No patients</string>
    <string name="patient">Patient</string>
    <string name="call_notification_channel">call_notification_channel</string>
</resources>