<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/patient_background_low_opacity" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_chamber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ib_sign_out"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/connect_with_our_doctors_directly"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_go_to_chamber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/go_to_chamber" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_patients_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_chamber"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:text="@string/patients"
        android:textColor="@android:color/primary_text_light"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/ib_sign_out"
        android:layout_width="24dp"
        android:layout_height="24sp"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_patient_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_patients_list_title"
        android:layout_marginHorizontal="16dp"
        tools:listitem="@layout/rcv_patient_item" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="32dp"
        android:contentDescription="@string/add_new_patient"
        app:icon="@android:drawable/ic_input_add"
        android:text="@string/patient"/>
</RelativeLayout>