<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/patient_background_low_opacity"
    android:fillViewport="true"
    tools:context=".ui.patient.PrescriptionViewActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/tv_doc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/doctor"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_doc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                tools:text="John" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_rectangle_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/tv_patient_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/patient_with_colon"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_patient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                tools:text="John" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/illness"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_illness_desc"
            android:layout_width="match_parent"
            android:textColor="@android:color/primary_text_light"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_bg"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/medicines"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lv_medicine_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_light"
            android:background="@drawable/rounded_rectangle_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/tests"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lv_tests_list"
            android:layout_width="match_parent"
            android:textColor="@android:color/primary_text_light"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/advice"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_advice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_light"
            android:background="@drawable/rounded_rectangle_bg"
            android:padding="8dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>